--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Annoy-o-Larm</string>
+    <string name="emailExampleRegister">yourmail@domain.com</string>
+    <string name="emailRegister">E-Mail</string>
+    <string name="passwordRegister">Password</string>
+    <string name="passwordExampleRegister">Password123</string>
+    <string name="repeatPasswordRegister">Repeat Your Password</string>
+    <string name="registerRegister">Register</string>
 </resources>
